--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <apache.poi.version>5.2.2</apache.poi.version>
+    <apache.poi.version>5.2.4</apache.poi.version>
     <slf4j.version>2.0.0</slf4j.version>
   </properties>
 
@@ -34,32 +34,6 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
   </build>
@@ -112,6 +86,7 @@
   </distributionManagement>
 
   <dependencies>
+  <!--
     <dependency>
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
@@ -124,9 +99,18 @@
       <version>${apache.poi.version}</version>
     </dependency>
 
-
-
-
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml-lite</artifactId>
+        <version>${apache.poi.version}</version>
+		</dependency> 
+-->
+    <!-- https://mvnrepository.com/artifact/io.quarkiverse.poi/quarkus-poi -->
+    <dependency>
+        <groupId>io.quarkiverse.poi</groupId>
+        <artifactId>quarkus-poi</artifactId>
+        <version>2.0.4</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
